caught a bug where anchors on the rushee page were preventing buttons from being clicked.  Fixed by adding a negative z-index to style

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -73,4 +73,5 @@ body {
     position: relative;
     padding-top: 100px;
     margin-top: -100px;
+    z-index: -1;
 }
